# Regulatory

./: GIT_WORKFLOW.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
src/regulatory/: __init__.py
src/regulatory/chains/: component_recommender_chain.py  gspr_filter_chain.py  gspr_generator_chain.py
src/regulatory/graph/: node.py  prompt.txt  state.py  workflow.py
src/regulatory/llm/: llm_provider.py
src/regulatory/models/: component_recommender_model.py  gspr_filter_model.py  gspr_generator_model.py
src/regulatory/prompts/: component_recommender_prompt.py  gspr_filter_prompt.py  gspr_generator_prompt.py
src/regulatory/utils/: __init__.py  logger.py
static/: index.html  style.css
tests/: test_dummy.py
